Fix debian build dependencies
This commit makes libssl-dev a build dependency for the
module in the debian control file and fixes a format-string
for snprintf().

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: debhelper-compat (= 13),
                libkeyutils-dev,
                libjansson-dev,
                uuid-dev,
+               libssl-dev,
                libtruenas-scram-dev,
                libtruenas-pwenc-dev,
                python3-all,
